   server hostname. tsdecrypt would try each of the addresses and use
   the one that works.
 * Change the way filenames are set in input/output options.
   Now file:// prefix is must be added before the filename otherwise
   the parameter is treated as network address.
 * Add --emm-filter (-a) option. This option implements EMM filtering.

2012-04-19 : Version 8.1
 * Add support for Bulcrypt CAS.

2012-04-12 : Version 8.0
 * Add --biss-key (-Q) option. This option enables BISS decryption.
 * Add FFdecsa support. In most cases FFdecsa decrypts faster than libdvcsa.
   To compile with FFdecsa support use "make ffdecsa".
 * Add --const-cw (-Y) option. This option allows using of constant
   code words for decryption.
 * Add "make help" target.
 * Display better timing information for ECMs and code word changes.
 * Filter special symbols in provider and service names before printing them.

2012-03-07 : Version 7.0
 * Add --input-buffer (-T) option. This option allows uninterrupted
   decryption even if OSCAM returns code words too late.
 * Add --log-file (-F) option.
 * Fixed newcamd protocol issues when OSCAM disappeared.
 * Fix (and optimize) decryption when the input is MPTS. Previously
   decrypting one stream broke the others.
 * notify: Add NO_EMM_RECEIVED event.

2012-02-24 : Version 6.0
 * Add --output-tos (-g) option used to set output TOS value.
 * Add --input-dump (-W) option used save input stream in file.
 * Add --pid-report (-j) option used to turn on PID reporting.
 * Add RTP output enabled by --output-rtp (-r) option.
 * Add --output-rtp-ssrc (-k) option used to set RTP SSRC.
 * A bug was fixed that prevented tsdecrypt from working if CAMD server
   was not available for couple of minutes.

2011-12-23 : Version 5.0
 * Add --bench (-b) option that benchmarks libdvbcsa decryption.
 * Remove --camd-pkt-delay (-y) option. This workaround is no longer needed.
 * Fix payload offset detection, a bug which broke packets that have