@@ -171,6 +171,7 @@ EMM options:
  -a --emm-filter <filter>   | Add EMM filter defined by <filter>.
                             . This option can be used multiple times (max:16).
                             . See FILTERING file for more info.
+ -q --no-emm-fixups         | Disable EMM fixups for CRYPTOWORKS and VIACCESS.
 
 ECM options:
  -X --ecm-pid <pid>         | Force ECM pid. Default: none
