@@ -75,6 +75,8 @@ void data_init(struct ts *ts) {
 	ts->emm_send    = 0;
 	ts->pid_filter  = 1;
 
+	ts->emm_fixups  = 1;
+
 	ts->emm_report_interval = 60;
 	ts->emm_last_report     = time(NULL);
 
